fix: Styling fix in Register Page

--- a/APP.KMX.App/Views/Account/RegisterPage.cshtml
+++ b/APP.KMX.App/Views/Account/RegisterPage.cshtml
@@ -36,7 +36,7 @@
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
 
-                <div>
+                <div class="create-account-password-validation-container">
                     <div class="mb-2"><img src="~/img/validation-icons/info.svg"/> Digite pelo menos 1 caractere minúsculo</div>
                     <div class="mb-2"><img src="~/img/validation-icons/info.svg" /> Digite pelo menos 1 caractere MAIÚSCULO</div>
                     <div class="mb-2"><img src="~/img/validation-icons/info.svg" /> Digite pelo menos 1 número</div>
