--- a/APP.KMX.App/wwwroot/css/site.css
+++ b/APP.KMX.App/wwwroot/css/site.css
@@ -30,7 +30,7 @@ body {
 
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     padding: 56px 49px;
     gap: 27px;
     width: 546px;
