--- a/APP.KMX.App/Views/Shared/_Layout.cshtml
+++ b/APP.KMX.App/Views/Shared/_Layout.cshtml
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/layout.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/components.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/file-conversion.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/auth.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/APP.KMX.App.styles.css" asp-append-version="true" />
     @await RenderSectionAsync("Styles", required: false)
-    @* <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-          rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> *@
+    
 </head>
 
 @{
@@ -70,7 +70,7 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3 main-content">
+        <main role="main" class="pb-3" style="padding-top: 80px;">
             @RenderBody()
         </main>
     </div>
