--- a/APP.KMX.App/Views/Account/RegisterPage.cshtml
+++ b/APP.KMX.App/Views/Account/RegisterPage.cshtml
@@ -37,10 +37,18 @@
                 </div>
 
                 <div class="create-account-password-validation-container">
-                    <div class="mb-2"><img src="~/img/validation-icons/info.svg"/> Digite pelo menos 1 caractere minúsculo</div>
-                    <div class="mb-2"><img src="~/img/validation-icons/info.svg" /> Digite pelo menos 1 caractere MAIÚSCULO</div>
-                    <div class="mb-2"><img src="~/img/validation-icons/info.svg" /> Digite pelo menos 1 número</div>
-                    <div class="mb-2"><img src="~/img/validation-icons/info.svg" /> Tenha pelo menos 8 caracteres em sua senha</div>
+                    <div class="password-requirement" id="lowercase-req">
+                        <img src="~/img/validation-icons/info.svg" /> Digite pelo menos 1 caractere minúsculo
+                    </div>
+                    <div class="password-requirement" id="uppercase-req">
+                        <img src="~/img/validation-icons/info.svg" /> Digite pelo menos 1 caractere MAIÚSCULO
+                    </div>
+                    <div class="password-requirement" id="number-req">
+                        <img src="~/img/validation-icons/info.svg" /> Digite pelo menos 1 número
+                    </div>
+                    <div class="password-requirement" id="length-req">
+                        <img src="~/img/validation-icons/info.svg" /> Tenha pelo menos 8 caracteres em sua senha
+                    </div>
                 </div>
                 <hr />
                 <div>
@@ -105,12 +113,50 @@
         // Enable the button if the checkbox is checked, otherwise disable it
         loginButton.disabled = !this.checked;
         if (!this.checked) {
-
             loginButton.className = "login-button-disabled";
         }
         else {
             loginButton.className = "login-button";
         }
-
     });
+
+    // Password validation functionality
+    function validatePassword() {
+        var password = document.getElementById('passwordField').value;
+        
+        // Get all requirement elements
+        var lowercaseReq = document.getElementById('lowercase-req');
+        var uppercaseReq = document.getElementById('uppercase-req');
+        var numberReq = document.getElementById('number-req');
+        var lengthReq = document.getElementById('length-req');
+        
+        // Check each requirement
+        var hasLowercase = /[a-z]/.test(password);
+        var hasUppercase = /[A-Z]/.test(password);
+        var hasNumber = /\d/.test(password);
+        var hasMinLength = password.length >= 8;
+        
+        // Update visual feedback
+        updateRequirement(lowercaseReq, hasLowercase);
+        updateRequirement(uppercaseReq, hasUppercase);
+        updateRequirement(numberReq, hasNumber);
+        updateRequirement(lengthReq, hasMinLength);
+        
+        // Return true if all requirements are met
+        return hasLowercase && hasUppercase && hasNumber && hasMinLength;
+    }
+    
+    function updateRequirement(element, isValid) {
+        if (isValid) {
+            element.classList.remove('invalid');
+            element.classList.add('valid');
+        } else {
+            element.classList.remove('valid');
+            element.classList.add('invalid');
+        }
+    }
+    
+    // Add event listener to password field
+    document.getElementById('passwordField').addEventListener('input', validatePassword);
+    document.getElementById('passwordField').addEventListener('keyup', validatePassword);
 </script>
