--- a/APP.KMX.App/Views/Account/RegisterPage.cshtml
+++ b/APP.KMX.App/Views/Account/RegisterPage.cshtml
@@ -29,7 +29,7 @@
                     @Html.TextBoxFor(a => a.Password, new { @class = "text-input password", type = "password", id = "passwordField" })
                     <div class="input-group-append">
                         <button type="button" class="btn btn-outline-secondary" onclick="togglePassword()">
-                            <img src class="" id="toggleIcon"></img>
+                             <img src="~/img/show-password-icon.svg" alt="Show Password" id="toggleIcon" />
                         </button>
                     </div>
                     @Html.ValidationMessageFor(a => a.Password)
@@ -92,18 +92,19 @@
 
 
 <script>
+     
     function togglePassword() {
         var passwordField = document.getElementById("passwordField");
         var toggleIcon = document.getElementById("toggleIcon");
 
         if (passwordField.type === "password") {
             passwordField.type = "text";
-            toggleIcon.classList.remove("fa-eye");
-            toggleIcon.classList.add("fa-eye-slash");
+            @* toggleIcon.classList.remove("fa-eye");
+            toggleIcon.classList.add("fa-eye-slash"); *@
         } else {
             passwordField.type = "password";
-            toggleIcon.classList.remove("fa-eye-slash");
-            toggleIcon.classList.add("fa-eye");
+            @* toggleIcon.classList.remove("fa-eye-slash");
+            toggleIcon.classList.add("fa-eye"); *@
         }
     }
     document.getElementById('termsCheckbox').addEventListener('change', function () {
